# rs-reports-scripts

./: .gitignore  README.md  REReportsScripts.code-workspace  RSReportsScripts.code-workspace  graphql.config.json
pyreports/classes/: ReportsAPI.py  reports_helpers.py
pyreports/graphql/mutations/: attachPickerOptionToReport.graphql
python/: pyproject.toml  requirements.txt
python/pyreports/: __init__.py
python/pyreports/classes/: ReportsAPI.py  Spinner.py
python/pyreports/graphql/: rs-reports.schema.graphql
python/pyreports/graphql/mutations/: deleteReport.graphql  startReport.graphql
python/pyreports/graphql/queries/: fetchDGOsByHuc10.graphql  fetchDGOsByLevelPathCount.graphql  fetchDGOsByLevelPathEnd.graphql  getProfile.graphql  listReportTypes.graphql  uploadUrls.graphql
python/scripts/: create_report.py  fetch_dgos.py  update_schema.py
typescript/: .pnp.cjs  .prettierrc.cjs  package.json  tsconfig.json
typescript/scripts/: createReport.ts  fetchDgos.ts  updateSchema.ts
typescript/src/: ReportsAPI.ts  Spinner.ts  index.ts  reportsHelpers.ts
typescript/src/graphql/: rs-reports.schema.graphql
typescript/src/graphql/mutations/: createReport.graphql  stopReport.graphql
typescript/src/graphql/queries/: downloadUrls.graphql  fetchDGOParquetByHuc10.graphql  fetchDGOs.graphql  fetchDGOsByLevelPathDistance.graphql  getReport.graphql  getReportType.graphql  globalReports.graphql  listReports.graphql
